# backup_sys

./: CMakeLists.txt  CMakeLists_c.txt  convert_encoding.sh  make.sh
include/: BackupManager.h  compress.h  do.h  encrypt.h  header.h  tar.h
include/openssl/: opensslv.h
src/: BackupManager.cpp  compress.cpp  do.cpp  encrypt.cpp  main.cpp  tar.cpp
tar_in/: 1.txt  2.txt
tar_out/: 2.txt
testbench/: CMakeLists.txt  test1.cpp
